// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controller it returns the correct fields 1`] = `
Object {
  "data": Object {
    "controller": Object {
      "call": "COOL",
      "humidityAmbient": 39,
      "id": "b06d8593-997a-44a1-ad23-2cf19e5ad071",
      "name": "Living Room",
      "temperatureAmbient": 20.5,
      "zoning": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`controllers it returns multiple controllers 1`] = `
Object {
  "data": Object {
    "controllers": Array [
      Object {
        "id": "b06d8593-997a-44a1-ad23-2cf19e5ad071",
      },
      Object {
        "id": "492cc711-4c86-42f5-bb2b-c61187825ffb",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
